Fe shit, Got sidekiq working

--- a/frontend/app/views/header.html
+++ b/frontend/app/views/header.html
@@ -1,13 +1,23 @@
-<div class="container header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h2 class="text-muted">
-    <span style="color: red"><strong>n</strong></span>
-    <span style="color: black"><strong>p</strong></span>
-    <span style="color: blue"><strong>r</strong></span>
-    <span>_ bumps</span>
-  </h2>
-</div>
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle">
+        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">
+        <span class="text-muted no-margin">
+          <span style="color: red"><strong>n</strong></span>
+          <span style="color: black"><strong>p</strong></span>
+          <span style="color: blue"><strong>r</strong></span>
+          <span>_ bumps</span>
+        </span>
+      </a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="">Link</a></li>
+        <li><a href="">Link</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
