--- a/app/views/person/show.html.haml
+++ b/app/views/person/show.html.haml
@@ -6,3 +6,6 @@
   = form_for(@person, html: {name: 'foobar'}) do |f|
     = f.label :name, "Name"
     = f.text_field :name
+
+- @playlists.each do |playlist|
+  %div= playlist['name']
