--- a/app/assets/stylesheets/person.css
+++ b/app/assets/stylesheets/person.css
@@ -1,4 +1,7 @@
-/*
-  Place all the styles related to the matching controller here.
-  They will automatically be included in application.css.
-*/
+.playlist-index {
+  float: left;
+}
+
+.subscription-index {
+  float: left;
+}
