--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -8,6 +8,7 @@
   %meta{ :charset => "utf-8" }
   %title= "PR Bumps"
   = javascript_include_tag "application"
+  = stylesheet_link_tag "application"
   = csrf_meta_tag
   = yield(:head)
 
