Add roboto font

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -9,6 +9,7 @@
   %title= "PR Bumps"
   = javascript_include_tag "application"
   = stylesheet_link_tag "application"
+  = stylesheet_link_tag('http://fonts.googleapis.com/css?family=Roboto:400,300,500')
   = csrf_meta_tag
   = yield(:head)
 
