--- a/app/assets/stylesheets/subscriptions.scss
+++ b/app/assets/stylesheets/subscriptions.scss
@@ -6,11 +6,22 @@
   display: none;
 }
 
+.ajax-success {
+  width: 30px;
+  background-color: $green-500;
+  height: 30px;
+  border-radius: 25px;
+}
+
 .subscription-index {
   float: left;
   .primary-action-button {
     margin-right: 10px;
     display: inline-block;
+  }
+
+  .subscription-index--action-buttons {
+    margin-top: 20px;
   }
 
   .icon-container {
@@ -46,7 +57,22 @@
 }
 
 .subscription-item {
+  // padding: 0px 5px 0px 15px;
+  // border-radius: 10px;
+  // transition: background-color 0.2s ease;
+
+  // &:hover {
+  //   background-color: $orange-100;
+  // }
+
+  .subscription-item--contents {
+    // TODO: This vertical center sucks
+    // to vertically center the toggle/label
+    // padding-top: 4%
+  }
+
   .subscription-item--toggle {
+    position: relative;
     margin-right: 10px;
     display: inline-block;
   }
