--- a/app/assets/stylesheets/subscriptions.scss
+++ b/app/assets/stylesheets/subscriptions.scss
@@ -1,7 +1,3 @@
-.playlist-index {
-  float: left;
-}
-
 .hide {
   display: none !important;
 }
@@ -19,6 +15,10 @@
 
 .subscription-index {
   float: left;
+  margin-left: 20px;
+  padding-left: 15px;
+  border-left: 1px solid $grey-300;
+
   .primary-action-button {
     margin-right: 10px;
     display: inline-block;
@@ -53,6 +53,7 @@
 
   .subscription-index--header {
     display: inline-block;
+    padding-top: 0px;
   }
 
   .subscription-index--loading-icon {
