--- a/app/assets/stylesheets/subscriptions.scss
+++ b/app/assets/stylesheets/subscriptions.scss
@@ -7,7 +7,7 @@
   display: table-cell;
   vertical-align: middle;
   width: 118px;
-  background-color: $green-500;
+  background-color: $light-green-500;
   transition: background-color 2.5s ease;
   height: 30px;
   border-radius: 5px;
